@@ -3,3 +3,5 @@
 
 Installer postgresql-42.7.4 (dans lib du projet)
 installer JavaFX et poser les *.jar dans setting.json
+compiler : javac --module-path "C:/Users/RAMDAN/Desktop/openjfx-17.0.12_windows-x64_bin-sdk/javafx-sdk-17.0.12/lib" --add-modules javafx.controls,javafx.fxml -cp ".;lib/postgresql-42.7.4.jar" VendingMachineUI.java
+executer : java --module-path "C:/Users/RAMDAN/Desktop/openjfx-17.0.12_windows-x64_bin-sdk/javafx-sdk-17.0.12/lib" --add-modules javafx.controls,javafx.fxml -cp ".;lib/postgresql-42.7.4.jar" VendingMachineUI.java
